# perfect-vector-shuffle

./: .travis.yml  CHANGELOG.md  README.md  cabal.project  makefile  perfect-vector-shuffle.cabal  stack.yaml
src/: Example.hs
src/Immutable/: Shuffle.hs
src/Mutable/: Shuffle.hs
test/: Test.hs
test/Immutable/: Test.hs
test/Mutable/: Test.hs
